# prefix-sum-vec

./: Cargo.toml  README.mkd
src/: lib.rs
